# Nightmare-Library

./: .env.example  .gitignore  .replit  CHANGES.md  CLOUDFLARE_SETUP.md  CODEBASE_EXPLANATION.txt  COMPLETE_AUDIT_FINAL.md  EMERGENCY_PROMPT.txt  ERROR_FIX_SUMMARY.md  FINAL_REPORT.md  IMAGE_AND_PATH_FIX_SUMMARY.md  PATH_VERIFICATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  README.md  REFACTOR_CHANGELOG.md  REFACTOR_CHECKLIST.md  SECURITY_AUDIT.md  VERIFICATION_COMPLETE.md  _headers  _redirects  anthropic-0.37.1-py3-none-any.whl  audit.sh  blessed-1.25.0-py3-none-any.whl  check_version.sh  create-zip.sh  dashboard.html  debugpy-1.8.19-cp311-cp311-manylinux_2_34_x86_64.whl  html2image-2.0.7-py3-none-any.whl  index.html  ipykernel-6.31.0-py3-none-any.whl  jiter-0.12.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  oi_config.yaml  open_interpreter-0.4.3-py3-none-any.whl  openai-2.15.0-py3-none-any.whl  package-lock.json  package.json  reader.html  regex-2026.1.15-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  replit.md  run_interpreter.sh  (+7 more)
Replit/: README.md
attached_assets/: Pasted--Agent-Nightmare-Library-Complete-Project-Specification_1765089308502.txt  Pasted-A-button-in-a-Cloudflare-Pages-website-built-with-HTML-_1766579687772.txt  Pasted-FINAL-MISSION-NIGHTMARE-LIBRARY-CRITICAL-REFACTOR-SECUR_1765044883182.txt  Pasted-Got-it-You-want-a-single-master-prompt-you-can-paste-in_1766124261897.txt  Pasted-Security-Outdated-dependencies-have-known-vulnerabiliti_1766114294583.txt  (+4 more)
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+111 files in other folders)
