
[package]
name = "nightmare-library-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub = "2.0"
pdf-extract = "0.7"
image = "0.24"

[profile.release]
opt-level = "z"
lto = true
